k8s/backend-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: ptutcare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: manar2/careway-backend:latest
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: ptutcare
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP
